crates/ruff_python_syntax_errors/src/snapshots/ruff_python_syntax_errors__tests__dictcomp_val.snap
---
source: crates/ruff_python_syntax_errors/src/lib.rs
expression: "test_snippet(contents, PythonVersion::default())"
---
[
    SyntaxError {
        kind: ReboundComprehensionVariable,
        range: 7..13,
        target_version: PythonVersion {
            major: 3,
            minor: 9,
        },
    },
]
